--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <body id="bodyPrinccipal">	
         <Div id="contenidos">
             <header>
-                <div id="elemento1"><img src="../img/banner2.jpg" width="1000" height="168"></div>
+                <div id="elemento1"><img src="../img/banner2.JPG" width="1000" height="168"></div>
             </header>
         	  <p>&nbsp;</p>
    			    <p>&nbsp;</p>
